# testTerminals

./: .gitignore  CMakeLists.txt  conandata.yml  game_player.cpp  game_state.hpp  game_state.txt  main.cpp  op.cpp  tesst.cpp
